# pc-codec

./: .gitignore  .gitmodules  CMakeLists.txt  configure  main.cpp
lib/libmuxer/: common.hpp  input.cpp  input.hpp  packet.cpp  packet.hpp
libmuxer/: CMakeLists.txt  common.hpp  input.cpp  input.hpp  output.cpp  output.hpp  packet.cpp  packet.hpp
libmuxer/libfdk-aac/lib/pkgconfig/: fdk-aac.pc
libmuxer/libffmpeg/include/libavutil/: ffversion.h
libmuxer/libffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
libmuxer/libx264/lib/pkgconfig/: x264.pc
